# beget-agent

./: .gitignore  Makefile  README.md  pyproject.toml
beget_agent/: cli.py  commands.py  config.py  exceptions.py  git.py  logger.py  sftp_agent.py  sftp_client.py  ssh_client.py
beget_agent/scripts/: beag.py
