[tool.poetry]
name = "beget_agent"
version = "0.1.0"
description = ""
authors = ["Konstantin Freidlin <freidlinks@ya.ru>"]
packages = [
    { include = "beget_agent" }
]

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^2.9.2"
argparse = "^1.4.0"
prompt = "^0.4.1"
progress = "^1.6"
environs = "^9.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[tool.poetry.scripts]
beag = "beget_agent.scripts.beag:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
